--- a/final-code-with-improvments/ecommerce-front/package.json
+++ b/final-code-with-improvments/ecommerce-front/package.json
@@ -9,12 +9,12 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "pm2": "^3.5.1",
+    "pm2": "^5.1.0",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
